--- a/html-css/exercicios/ex 022/fundo001.html
+++ b/html-css/exercicios/ex 022/fundo001.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste de imagem de fundo</title>
     <style>
+        body {
+            background-image: url(imgs/wallpaper001.jpg);
+        }
+
         .quadrado {
             display: inline-block;
             border: 1px solid black;
