--- a/html-css/exercicios/ex 022/fundo003.html
+++ b/html-css/exercicios/ex 022/fundo003.html
@@ -5,26 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .bloco {
-            background-image: url(imgs/wallpaper002.jpg);
+            background-image: url(imgs/wallpaper003.jpg);
             height: 200px;
             border: 1px solid black;
             margin: 10px;
             border-radius: 20px;
         }
+
+        #q1 {
+            background-position: left top;
+        }
+
+        #q2 {
+            background-position: left center
+        }
+        #q3 {
+            background-position: right bottom;
+        }
+        #q4 {
+            background-position: center center;
+        }
     </style>
     <title>Poosiçao dos fundos</title>
 </head>
 <body>
-    <div class="bloco">
+    <div class="bloco" id="q1">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q2">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q3">
 
     </div>
-    <div class="bloco">
+    <div class="bloco" id="q4">
 
     </div>
 </body>
