--- a/html-css/exercicios/ex 022/fundo006.html
+++ b/html-css/exercicios/ex 022/fundo006.html
@@ -11,6 +11,7 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
